# BuoyanText

./: .pypirc  README.md  pyproject.toml  setup.py
examples/: 000001平安银行2012年年度报告.txt  demo.py
src/: ByTextNorm.py  TextNorm.py  TextReader.py
src/BuoyanText/: ByTextNorm.py  TextNorm.py  TextReader.py  punctuation_Chinese.json
src/BuoyanText.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/BuoyanText/data/norm/: stopwords_Chinese.json  stopwords_English.json
src/BuoyantText.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nlp_data/Chinese/: stopwords.json
src/nlp_data/English/: contractions.json
