[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TextNormalizer"
version = "0.0.1"
authors = [
  { name="Boyang Xu", email="by24225@163.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BuoyantXu/TextNormalizer"
"Bug Tracker" = "https://github.com/BuoyantXu/TextNormalizer/issues"
